[metadata]
name = mprod-package-uriamorP
version = 0.0.1a1
author = 
    Uria Mor
    Rafael Valdes Mas
    Yotam Cohen
    Haim Avron
project_url = https://github.com/UriaMorP/mprod_package
author_email = uriamo@gmail.com,
description = Software implementation for tensor-tensor m-product framework
long_description_content_type = text/markdown
long_description = file: README.md
license =  BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Scientists
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only


python_requires = >=3.6.8